--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 	},
 	"dependencies": {
 		"amazon-cognito-identity-js": "^3.2.5",
-		"node-fetch": "^2.6.0"
+		"node-fetch": "^3.0.0-beta.2"
 	},
 	"devDependencies": {
 		"typescript": "^3.8.3"
