--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
 	"name": "@ctx-core/cognito",
 	"version": "4.3.52",
 	"description": "@ctx-core aws cognito bindings",
-	"main": "index.js",
-	"module": "index.js",
-	"types": "index.ts",
+	"main": "./index.js",
+	"module": "./index.js",
+	"types": "./index.ts",
 	"scripts": {
 		"build": "npm run clean && npm run compile",
 		"clean": "rm -f tsconfig.tsbuildinfo",
