--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 		"declaration": true,
 		"noEmitOnError": true,
 		"noErrorTruncation": true,
-		"module": "esnext",
+		"module": "commonjs",
 		"moduleResolution": "node",
 		"esModuleInterop": true,
 		"noImplicitAny": false,
@@ -26,5 +26,5 @@
 			"dom"
 		]
 	},
-	"exclude": []
+	"exclude": ["node_modules"]
 }
