--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
 		"access": "public"
 	},
 	"dependencies": {
-		"amazon-cognito-identity-js": "^4.4.0",
-		"node-fetch": "^3.0.0-beta.2"
+		"amazon-cognito-identity-js": "^4.4.0"
 	},
 	"devDependencies": {
 		"typescript": "^4.0.2"
