import type for type imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,10 @@
 		"declarationDir": ".",
 		"lib": [
 			"dom"
-		]
+		],
+		"importsNotUsedAsValues": "error"
 	},
-	"exclude": ["node_modules"]
+	"exclude": [
+		"node_modules"
+	]
 }
