--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
 		"rootDir": "src",
 		"outDir": "dist",
 		"mapRoot": "dist",
-		"declarationDir": "types",
+		"declarationDir": "dist",
 		"lib": [
 			"dom",
 			"ES2020"
@@ -34,6 +34,6 @@
 	},
 	"exclude": [
 		"node_modules",
-		"types"
+		"dist"
 	]
 }
