--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"clean": "rm -rf dist",
 		"compile": "swc src --out-dir dist --copy-files --source-maps --config-file .swcrc",
 		"exec": "$@",
-		"prepublishOnly": "npm run build"
+		"prepublishOnly": "npm run clean && npm run build"
 	},
 	"dependencies": {
 		"amazon-cognito-identity-js": "^5.2.3"
