--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/cognito",
-	"version": "10.0.25",
+	"version": "10.0.27",
 	"description": "@ctx-core aws cognito bindings",
 	"keywords": [
 		"ctx-core",
@@ -39,9 +39,9 @@
 		"amazon-cognito-identity-js": "^5.2.3"
 	},
 	"devDependencies": {
-		"@swc/cli": "^0.1.51",
-		"@swc/core": "^1.2.110",
-		"typescript": "^4.5.2"
+		"@swc/cli": "^0.1.52",
+		"@swc/core": "^1.2.113",
+		"typescript": "next"
 	},
 	"publishConfig": {
 		"access": "public",
