--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,14 +22,14 @@
 			"node_modules/@types"
 		],
 		"rootDir": "src",
-		"outDir": "dist",
-		"declarationDir": "dist",
+		"outDir": "lib",
+		"declarationDir": "lib",
 		"lib": ["dom", "ESNext"],
 		"importsNotUsedAsValues": "error",
 		"strict": true
 	},
 	"exclude": [
 		"node_modules",
-		"dist"
+		"lib"
 	]
 }
