--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/cognito",
-	"version": "10.2.1",
+	"version": "10.2.2",
 	"description": "@ctx-core aws cognito bindings",
 	"keywords": [
 		"ctx-core",
@@ -20,6 +20,7 @@
 	"type": "module",
 	"files": [
 		"*.d.ts",
+		"*.json",
 		"./_types",
 		"./authenticateUser",
 		"./changePassword",
@@ -52,7 +53,7 @@
 		"test-unit-coverage": "c8 pnpm test-unit"
 	},
 	"dependencies": {
-		"@ctx-core/env": "^17.4.1",
+		"@ctx-core/env": "^17.4.2",
 		"amazon-cognito-identity-js": "^6.3.7"
 	},
 	"devDependencies": {
