--- a/package.json
+++ b/package.json
@@ -59,13 +59,13 @@
 		"disable:test:unit:coverage": "c8 pnpm test:unit"
 	},
 	"dependencies": {
-		"amazon-cognito-identity-js": "^6.3.12",
-		"ctx-core": "^7.2.32"
+		"amazon-cognito-identity-js": "^6.3.15",
+		"ctx-core": "*"
 	},
 	"devDependencies": {
-		"c8": "^10.1.2",
+		"c8": "^10.1.3",
 		"check-dts": "^0.8.2",
-		"tsx": "^4.19.0",
+		"tsx": "^4.20.6",
 		"typescript": "next",
 		"uvu": "^0.5.6"
 	},
